force-app/main/default/objects/Opportunity/fields/Divisa__c.field-meta.xml
<CustomField>
    <fullName>Divisa__c</fullName>
    <description>Tiene que tener los mismo valores que el campo divisa de la entidad Cuenta.</description>
    <label>Divisa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AED</fullName>
                <label>Arab Emirates Dirham (AED)</label>
            </value>
            <value>
                <fullName>PAB</fullName>
                <label>Balboa</label>
            </value>
            <value>
                <fullName>BHD</fullName>
                <label>Dinar Bahreini</label>
            </value>
            <value>
                <fullName>USD</fullName>
                <label>Dolar</label>
            </value>
            <value>
                <fullName>PLN</fullName>
                <label>Esloti (PLN)</label>
            </value>
            <value>
                <fullName>EUR</fullName>
                <default>true</default>
                <label>Euros</label>
            </value>
            <value>
                <fullName>GBP</fullName>
                <label>Libra</label>
            </value>
            <value>
                <fullName>ARS</fullName>
                <label>Peso Argentino</label>
            </value>
            <value>
                <fullName>CLP</fullName>
                <label>Peso chileno</label>
            </value>
            <value>
                <fullName>COP</fullName>
                <label>Peso colombiano</label>
            </value>
            <value>
                <fullName>MXN</fullName>
                <label>Peso mexicano</label>
            </value>
            <value>
                <fullName>BRL</fullName>
                <label>Real brasileño</label>
            </value>
            <value>
                <fullName>SAR</fullName>
                <label>Saudi Riyal</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>Sol</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>