force-app/main/default/objects/Opportunity/fields/Division_SAP__c.field-meta.xml
<CustomField>
    <fullName>Division_SAP__c</fullName>
    <description>Campo División para SAP</description>
    <label>División SAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>