force-app/main/default/objects/Opportunity/fields/DivisionPicklist__c.field-meta.xml
<CustomField>
    <fullName>DivisionPicklist__c</fullName>
    <description>El campo Sector de Mercados tiene que tener los mismos valores que DivisionPicklist, ya que está en el alta de la oportunidad
También se tienen que crear los registros en Parametrica</description>
    <label>División / Sector de Mercado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mercado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>60029503</fullName>
                <label>AVIATION</label>
            </value>
            <value>
                <fullName>60029514</fullName>
                <label>BFS</label>
            </value>
            <value>
                <fullName>60029481</fullName>
                <label>BPO UTILITIES</label>
            </value>
            <value>
                <fullName>60029509</fullName>
                <label>BUILDING EMEA &amp; ASIA</label>
            </value>
            <value>
                <fullName>60029508</fullName>
                <label>BUILDING LATAM</label>
            </value>
            <value>
                <fullName>60029510</fullName>
                <label>BUILDING SPAIN</label>
            </value>
            <value>
                <fullName>60029513</fullName>
                <label>CONSUMER &amp; BUSINESS SERVICES</label>
            </value>
            <value>
                <fullName>60049219</fullName>
                <label>DIGITAL ADMINISTRATION</label>
            </value>
            <value>
                <fullName>60029428</fullName>
                <label>ENEL</label>
            </value>
            <value>
                <fullName>60029475</fullName>
                <label>ENERGY</label>
            </value>
            <value>
                <fullName>60029489</fullName>
                <label>ENVIRONMENT</label>
            </value>
            <value>
                <fullName>60048556</fullName>
                <label>HEALTH</label>
            </value>
            <value>
                <fullName>60029488</fullName>
                <label>HYDRAULIC WORKS</label>
            </value>
            <value>
                <fullName>60048557</fullName>
                <label>IBERDROLA</label>
            </value>
            <value>
                <fullName>60048559</fullName>
                <label>INDUSTRY</label>
            </value>
            <value>
                <fullName>60029500</fullName>
                <label>INFRA. SUPERVISIONS</label>
            </value>
            <value>
                <fullName>60030704</fullName>
                <label>INNOVATION</label>
            </value>
            <value>
                <fullName>60031603</fullName>
                <label>INSURANCE</label>
            </value>
            <value>
                <fullName>60029416</fullName>
                <label>LAND MANAGEMENT</label>
            </value>
            <value>
                <fullName>60050065</fullName>
                <label>MARINE &amp; COASTALS</label>
            </value>
            <value>
                <fullName>60050044</fullName>
                <label>MICROSOFT</label>
            </value>
            <value>
                <fullName>60029483</fullName>
                <label>OIL &amp; GAS</label>
            </value>
            <value>
                <fullName>60048560</fullName>
                <label>ONCE</label>
            </value>
            <value>
                <fullName>60029484</fullName>
                <label>PROCESS PLANTS</label>
            </value>
            <value>
                <fullName>60029499</fullName>
                <label>RAILWAY/METRO</label>
            </value>
            <value>
                <fullName>60029501</fullName>
                <label>RAILWAY SYSTEMS</label>
            </value>
            <value>
                <fullName>60055372</fullName>
                <label>REAL ESTATE SPAIN</label>
            </value>
            <value>
                <fullName>60029498</fullName>
                <label>ROADS</label>
            </value>
            <value>
                <fullName>60035584</fullName>
                <label>SMART FACTORIES</label>
            </value>
            <value>
                <fullName>60033576</fullName>
                <label>TMT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>