force-app/main/default/objects/Opportunity/fields/Email_CEO_COO__c.field-meta.xml
<CustomField>
    <fullName>Email_CEO_COO__c</fullName>
    <label>Email CEO y Global COO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>