force-app/main/default/objects/Opportunity/fields/Estimacion_coste_preventa__c.field-meta.xml
<CustomField>
    <fullName>Estimacion_coste_preventa__c</fullName>
    <inlineHelpText>Con Preventa --&gt; Responsable Preventa

Sin Preventa --&gt; Responsable Delivery Center</inlineHelpText>
    <label>Estimación coste preventa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>