force-app/main/default/objects/Opportunity/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <formula>IF(NOT(ISBLANK(Oportunidad_Relacionada__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indica si la oportunidad es una extensión</inlineHelpText>
    <label>Extensión</label>
    <type>Checkbox</type>
</CustomField>