force-app/main/default/objects/Opportunity/fields/Fecha_de_solicitud_de_soporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_solicitud_de_soporte__c</fullName>
    <label>Fecha de solicitud de soporte</label>
    <type>DateTime</type>
</CustomField>