force-app/main/default/objects/Opportunity/fields/Fecha_estimada_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_de_cierre__c</fullName>
    <description>Fecha estimada de cierre de la oportunidad</description>
    <inlineHelpText>Fecha estimada de cierre de la oportunidad, indique la fecha REAL si ya se ha cerrado</inlineHelpText>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>