force-app/main/default/objects/Opportunity/fields/Fecha_limite_de_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_de_presentacion__c</fullName>
    <description>Fecha de presentación de la oferta</description>
    <inlineHelpText>Fecha límite de presentación de la oferta, fecha REAL en caso de haberla presentado</inlineHelpText>
    <label>Fecha presentación</label>
    <type>Date</type>
</CustomField>