force-app/main/default/objects/Opportunity/fields/Fecha_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_presentacion__c</fullName>
    <formula>Fecha_limite_de_presentacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha presentacion</label>
    <type>Date</type>
</CustomField>