force-app/main/default/objects/Opportunity/fields/Fecha_Qa_Econ_mico__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Qa_Econ_mico__c</fullName>
    <description>Es la fecha cuando se agenda y pasa el QA Económico</description>
    <label>Fecha Qa Económico</label>
    <type>Date</type>
</CustomField>