force-app/main/default/objects/Opportunity/fields/Fecha_sol_cod__c.field-meta.xml
<CustomField>
    <fullName>Fecha_sol_cod__c</fullName>
    <label>Fecha Solicitud Codigo</label>
    <type>Date</type>
</CustomField>