force-app/main/default/objects/Opportunity/fields/Go_Presentaci_n_Oferta__c.field-meta.xml
<CustomField>
    <fullName>Go_Presentaci_n_Oferta__c</fullName>
    <label>¿Go Posterior a Presentación Oferta?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>