force-app/main/default/objects/Opportunity/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <label>GP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>