force-app/main/default/objects/Opportunity/fields/GP_Super__c.field-meta.xml
<CustomField>
    <fullName>GP_Super__c</fullName>
    <label>GP_Super</label>
    <length>255</length>
    <type>Text</type>
</CustomField>