force-app/main/default/objects/Opportunity/fields/GUIDOPORTUNIDAD__c.field-meta.xml
<CustomField>
    <fullName>GUIDOPORTUNIDAD__c</fullName>
    <label>GUIDOPORTUNIDAD</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>