force-app/main/default/objects/Opportunity/fields/Imagen_Incoherencia_de_datos__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Incoherencia_de_datos__c</fullName>
    <description>Imagen descriptiva de existencia de incoherencia en los datos.</description>
    <formula>IF(AND (
	NOT (ISPICKVAL(StageName, &apos;Cerrada&apos;)),
	 LastModifiedDate &lt;  DATETIMEVALUE(ADDMONTHS(TODAY() ,-1)) 
	)
,IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680N00000ENbsV&quot;, &quot;Incoherencias parciales&quot;, 30, 30)
,IF(Existencia_de_Incoherencias__c, 
IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680N00000ENbsU&quot;, &quot;Incoherencias&quot;, 30, 30), 
IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680N00000ENbsT&quot;, &quot;Sin Incoherencias&quot;, 30, 30) 
)
)</formula>
    <inlineHelpText>Indicador de existencia de incoherencia en los datos. Si se muestra en rojo, revise las fecha de presentación y/o cierre de la oportunidad.</inlineHelpText>
    <label>Coherencia en los datos</label>
    <type>Text</type>
</CustomField>