force-app/main/default/objects/Opportunity/fields/Importe_adjudicacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_adjudicacion__c</fullName>
    <description>Importe adjudicación Ayesa</description>
    <inlineHelpText>Indicar el importe correspondiente de Ayesa en la UTE</inlineHelpText>
    <label>Importe UTE Ayesa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>