force-app/main/default/objects/Opportunity/fields/Importe_Contratacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_Contratacion__c</fullName>
    <description>Importe contratación Ayesa</description>
    <inlineHelpText>Final Amount Contracted for Ayesa Company as per the final contract (It could be different from awarded amount)</inlineHelpText>
    <label>Importe contratación Ayesa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>