force-app/main/default/objects/Opportunity/fields/Importe_en_divisa_local__c.field-meta.xml
<CustomField>
    <fullName>Importe_en_divisa_local__c</fullName>
    <inlineHelpText>Submitted Offer Amount is the final fees submitted to client for the entire contract (considering the part of the partners in case of JV)</inlineHelpText>
    <label>Importe Total Ofertado en divisa local</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>