force-app/main/default/objects/Opportunity/fields/Importe_final__c.field-meta.xml
<CustomField>
    <fullName>Importe_final__c</fullName>
    <formula>IF (ISPICKVAL(Tipo_Participacion_Ayesa__c, &apos;UTE&apos;),
Importe_adjudicacion__c,
Importe_total_sin_IVA__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Si la oportunidad es en UTE este campo muestra el importe UTE Ayesa, si no va en UTE muestra el Importe total Oferttado (sin IVA) euros</inlineHelpText>
    <label>Importe final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>