force-app/main/default/objects/Opportunity/fields/Importe_Licitacion__c.field-meta.xml
<CustomField>
    <fullName>Importe_Licitacion__c</fullName>
    <inlineHelpText>En el campo Importe total de Licitación (sin IVA) en se indicará todo el importe conocido de la licitación (es conocido en el momento de abrir la oportunidad)</inlineHelpText>
    <label>Importe Total (sin IVA) €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>