force-app/main/default/objects/Opportunity/fields/Importe_limite_OCP__c.field-meta.xml
<CustomField>
    <fullName>Importe_limite_OCP__c</fullName>
    <label>Importe limite OCP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>