force-app/main/default/objects/Opportunity/fields/Importe_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Importe_Propietario__c</fullName>
    <formula>Importe_total_sin_IVA__c- Importe_Comercial_Apoyo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Propietario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>