force-app/main/default/objects/Opportunity/fields/Importe_total_ofertado_Breakdown_ajust__c.field-meta.xml
<CustomField>
    <fullName>Importe_total_ofertado_Breakdown_ajust__c</fullName>
    <description>&apos;Importe total ofertado (sin IVA) Euros&apos; ajustado según el campo &apos;Diversification breakdown&apos;. Se va a utilizar en los informes de Sofia</description>
    <formula>IF(
ISPICKVAL( Bookings_breakdown__c, &quot;No&quot;) || ISBLANK(TEXT( Bookings_breakdown__c)),
NULL,
IF(
ISPICKVAL(Bookings_breakdown__c, &quot;Up-selling&quot;),
Importe_total_sin_IVA__c * Up_selling__c,
Importe_total_sin_IVA__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe total ofertado (Breakdown ajust)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>