force-app/main/default/objects/Opportunity/fields/Informar_PRL__c.field-meta.xml
<CustomField>
    <fullName>Informar_PRL__c</fullName>
    <inlineHelpText>Al informar &apos;Sí &apos;, se enviará un correo a PRL para indicar esta necesidad en la oportunidad</inlineHelpText>
    <label>Informar PRL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>