force-app/main/default/objects/Opportunity/fields/Innovation_Work_Stream__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Work_Stream__c</fullName>
    <label>Innovation Work Stream</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VTH_Technology_Level_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>WS1</fullName>
                <label>WS1 - Next generation of AI-powered user experiences</label>
            </value>
            <value>
                <fullName>WS2</fullName>
                <label>WS2 - Data-driven decision making and business operations</label>
            </value>
            <value>
                <fullName>WS3</fullName>
                <label>WS3 - Secured cloud infrastructures and platforms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>