force-app/main/default/objects/Opportunity/fields/K_Formula__c.field-meta.xml
<CustomField>
    <fullName>K_Formula__c</fullName>
    <formula>IF(OR (RENTPPTO__c != 0,RENTPPTO__c != null), 1/(1-RENTPPTO__c),0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>K</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>