force-app/main/default/objects/Opportunity/fields/Margen_Ofertado_Euros__c.field-meta.xml
<CustomField>
    <fullName>Margen_Ofertado_Euros__c</fullName>
    <formula>Importe_total_sin_IVA__c * Margen_estimado_incluye_recargos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margen Ofertado €</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>