force-app/main/default/objects/Opportunity/fields/Margen_Ponderado__c.field-meta.xml
<CustomField>
    <fullName>Margen_Ponderado__c</fullName>
    <formula>VALUE(SUBSTITUTE(TEXT(Probabilidad__c) , &apos;%&apos;, &apos;&apos;))*Margen_Previsto_Euros__c /100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Probabilidad * Margen Previsto Euros</inlineHelpText>
    <label>Margen Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>