force-app/main/default/objects/Opportunity/fields/Margen_Previsto_Local__c.field-meta.xml
<CustomField>
    <fullName>Margen_Previsto_Local__c</fullName>
    <label>Margen Previsto Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>