force-app/main/default/objects/Opportunity/fields/margen_productoHard__c.field-meta.xml
<CustomField>
    <fullName>margen_productoHard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margen HW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>