force-app/main/default/objects/Opportunity/fields/Mes_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Mes_Cierre__c</fullName>
    <description>Mes de cierre de la oportunidad , según fecha de cierre informada.</description>
    <formula>IF(MONTH(Fecha_estimada_de_cierre__c )=1, &quot;Enero&quot;, 
			IF(MONTH(Fecha_estimada_de_cierre__c )=2, &quot;Febrero&quot;,
						IF(MONTH(Fecha_estimada_de_cierre__c )=3, &quot;Marzo&quot;,
									   IF(MONTH(Fecha_estimada_de_cierre__c )=4, &quot;Abril&quot;,
															IF(MONTH(Fecha_estimada_de_cierre__c )=5, &quot;Mayo&quot;,
																		   IF(MONTH(Fecha_estimada_de_cierre__c )=6, &quot;Junio&quot;,
																								IF(MONTH(Fecha_estimada_de_cierre__c )=7, &quot;Julio&quot;,
																											IF(MONTH(Fecha_estimada_de_cierre__c )=8, &quot;Agosto&quot;,
																														IF(MONTH(Fecha_estimada_de_cierre__c )=9, &quot;Septiembre&quot;,
																																	IF(MONTH(Fecha_estimada_de_cierre__c )=10, &quot;Octubre&quot;,
																																				IF(MONTH(Fecha_estimada_de_cierre__c )=11, &quot;Noviembre&quot;,
																																							IF(MONTH(Fecha_estimada_de_cierre__c )=12, &quot;Diciembre&quot;,
																																								&quot;-&quot;))))))))))))</formula>
    <inlineHelpText>Mes de cierre de la oportunidad , según fecha de cierre informada.</inlineHelpText>
    <label>Mes Cierre</label>
    <type>Text</type>
</CustomField>