force-app/main/default/objects/Opportunity/fields/Modelo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Modelo_de_Servicio__c</fullName>
    <label>Modelo de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto Cerrado</fullName>
            </value>
            <value>
                <fullName>Asistencia Técnica</fullName>
            </value>
            <value>
                <fullName>Outsourcing o Servicios Gestionados</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>