force-app/main/default/objects/Opportunity/fields/Motivo_Cross_Selling__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Cross_Selling__c</fullName>
    <label>Motivo Sinergia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Geografía</fullName>
            </value>
            <value>
                <fullName>Mercados</fullName>
                <label>Conocimiento de Mercados</label>
            </value>
            <value>
                <fullName>Oferta</fullName>
                <label>Línea de Servicio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>